// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component H3 Snapshot added optional style inline prop 1`] = `
<h3
  className="jsx-1190462014"
  style={
    Object {
      "lineHeight": 2,
      "marginTop": 30,
    }
  }
>
  Heading 1
</h3>
`;

exports[`Component H3 Snapshot primary color of the theme 1`] = `
<h3
  className="jsx-2621311988"
  style={Object {}}
>
  Heading 3
</h3>
`;

exports[`Component H3 Snapshot secondary font-family of the theme 1`] = `
<h3
  className="jsx-2071107651"
  style={Object {}}
>
  Heading 3
</h3>
`;

exports[`Component H3 Snapshot without arguments, take the default values 1`] = `
<h3
  className="jsx-1190462014"
  style={Object {}}
>
  Heading 3
</h3>
`;
